force-app/main/default/objects/Web_Content__c.object
<CustomObject>
    <fields>
        <fullName>URL_Token_Lang_1_school_url_argument__c</fullName>
        <inlineHelpText>Token = [school:url-arg-lang]</inlineHelpText>
        <label>URL Argument Language 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>URL_Token__c</fullName>
        <inlineHelpText>Token =  [school:url-argument]
Please don&apos;t add slashes (/) before or after the argument e.g. british-school-brazil is correct - /british-school-brazil/ is incorrect</inlineHelpText>
        <label>URL Argument</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Update_Request_Description__c</fullName>
        <description>Populated when sending a request for an updated translation, indicates in the email template what changes have been made to warrant the updated translation request</description>
        <label>Update Request Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Video_1_TITLE__c</fullName>
        <description>The title of the matching video</description>
        <label>Video 1 Title</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Video_1_Title_English__c</fullName>
        <label>Video 1 Title (English)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Video_1_URL__c</fullName>
        <description>This field is used to upload videos to the Websites. The videos are hosted in the VIMEO premium account and this field only needs the url of it, plus a #000 (3 digit number) to define the ordering in video gallery and sidebar blocks.</description>
        <inlineHelpText>Include the whole url e.g.: http://www.myvideo.com and add #3 digit number at the end e.g. http://www.myvideo.com#010 to denote the ordering on the main video gallery page and in sidebars. The lower the number, the earlier the video comes in the ordering.</inlineHelpText>
        <label>Video 1 Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Video_2_TITLE__c</fullName>
        <description>The title of the matching video</description>
        <label>Video 2 Title</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Video_2_Title_English__c</fullName>
        <label>Video 2 Title (English)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Video_2_URL__c</fullName>
        <description>This field is used to upload videos to the Websites. The videos are hosted in the VIMEO premium account and this field only needs the url of it, plus a #000 (3 digit number) to define the ordering in video gallery and sidebar blocks.</description>
        <inlineHelpText>Include the whole url e.g.: http://www.myvideo.com and add #3 digit number at the end e.g. http://www.myvideo.com#010 to denote the ordering on the main video gallery page and in sidebars. The lower the number, the earlier the video comes in the ordering.</inlineHelpText>
        <label>Video 2 Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Video_3_TITLE__c</fullName>
        <description>The title of the matching video</description>
        <label>Video 3 Title</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Video_3_Title_English__c</fullName>
        <label>Video 3 Title (English)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Video_3_URL__c</fullName>
        <description>This field is used to upload videos to the Websites. The videos are hosted in the VIMEO premium account and this field only needs the url of it, plus a #000 (3 digit number) to define the ordering in video gallery and sidebar blocks.</description>
        <inlineHelpText>Include the whole url e.g.: http://www.myvideo.com and add #3 digit number at the end e.g. http://www.myvideo.com#010 to denote the ordering on the main video gallery page and in sidebars. The lower the number, the earlier the video comes in the ordering.</inlineHelpText>
        <label>Video 3 Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Video__c</fullName>
        <description>This field is used to upload videos to the Group Site. The videos are hosted in the VIMEO premium account and this field only needs the url of it.</description>
        <inlineHelpText>Introduce the URL of the video you want to show in the Group Website. Include the whole url, ex:  http://www.myvideo.com</inlineHelpText>
        <label>Video</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>WebContentIdText__c</fullName>
        <label>WebContentIdText</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Web_Block_Title__c</fullName>
        <formula>Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Web Block Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Web_Token__c</fullName>
        <inlineHelpText>Token = [school:web]
Use https (not http) and ADD a trailing slash &quot;/&quot;</inlineHelpText>
        <label>Web Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Webform_From_Email__c</fullName>
        <formula>&quot;no-reply@&quot;&amp;Domain_Token__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Webform From Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Webpage_Layout__c</fullName>
        <inlineHelpText>Select the relevant option to use a special, pre-made page layout in the node. For example: display news the &apos;Online Application&apos; for on a page when choosing &quot;Admissions&quot; or show the &apos;Global Network Map&apos; by choosing &quot;Foundation&quot; etc.</inlineHelpText>
        <label>Webpage Layout</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>News</fullName>
                </value>
                <value>
                    <fullName>Staff</fullName>
                </value>
                <value>
                    <fullName>Jobs</fullName>
                </value>
                <value>
                    <fullName>Foundation</fullName>
                </value>
                <value>
                    <fullName>Services</fullName>
                </value>
                <value>
                    <fullName>Testimonials</fullName>
                </value>
                <value>
                    <fullName>Video Gallery</fullName>
                </value>
                <value>
                    <fullName>Calendar</fullName>
                </value>
                <value>
                    <fullName>Booklets</fullName>
                </value>
                <value>
                    <fullName>Photo Gallery</fullName>
                </value>
                <value>
                    <fullName>Contact Us</fullName>
                </value>
                <value>
                    <fullName>Contact Us (Double)</fullName>
                </value>
                <value>
                    <fullName>Employment Application</fullName>
                </value>
                <value>
                    <fullName>Admissions</fullName>
                </value>
                <value>
                    <fullName>Thank you - Contact Us</fullName>
                </value>
                <value>
                    <fullName>Thank you - Employment Application</fullName>
                </value>
                <value>
                    <fullName>Thank you - Job Question</fullName>
                </value>
                <value>
                    <fullName>Thank you - Online Application</fullName>
                </value>
                <value>
                    <fullName>External Embed (Top)</fullName>
                </value>
                <value>
                    <fullName>External Embed (Bottom)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>webId__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>webId</label>
        <type>Text</type>
    </fields>
    <label>Web Content</label>
    <nameField>
        <label>Menu Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Web Content</pluralLabel>
    <recordTypes>
        <fullName>Additional_Navigable_Content</fullName>
        <active>true</active>
        <description>For content pages that are only accessible via a navigation sidebar block</description>
        <label>Additional Navigable Content</label>
    </recordTypes>
    <recordTypes>
        <fullName>Additional_Navigable_Content_Translation</fullName>
        <active>true</active>
        <label>Additional Navigable Content Translation</label>
    </recordTypes>
    <recordTypes>
        <fullName>Announcement_Bar</fullName>
        <active>true</active>
        <label>Announcement Bar</label>
    </recordTypes>
    <recordTypes>
        <fullName>Announcement_Bar_Translation</fullName>
        <active>true</active>
        <label>Announcement Bar Translation</label>
    </recordTypes>
    <recordTypes>
        <fullName>Groupable</fullName>
        <active>true</active>
        <label>Groupable</label>
    </recordTypes>
    <recordTypes>
        <fullName>Groupable_Translation</fullName>
        <active>true</active>
        <label>Groupable Translation</label>
    </recordTypes>
    <recordTypes>
        <fullName>Home_Page_Picture_Carousel_Group</fullName>
        <active>true</active>
        <label>Home Page Picture Carousel Group</label>
    </recordTypes>
    <recordTypes>
        <fullName>Home_Page_Picture_Carousel_Translation</fullName>
        <active>true</active>
        <label>Home Page Picture Carousel Translation</label>
    </recordTypes>
    <recordTypes>
        <fullName>Home_Page_Picture_Carrousel</fullName>
        <active>true</active>
        <description>For picture carousels on the home page of the school site. In the future will also be used for the group site.</description>
        <label>Home Page Picture Carousel</label>
    </recordTypes>
    <recordTypes>
        <fullName>Menu_Image</fullName>
        <active>true</active>
        <label>Menu Image</label>
    </recordTypes>
    <recordTypes>
        <fullName>Menu_Image_Translation</fullName>
        <active>true</active>
        <label>Menu Image Translation</label>
    </recordTypes>
    <recordTypes>
        <fullName>Normal_Web_Content</fullName>
        <active>true</active>
        <description>The most standard format for a website sub-menu.</description>
        <label>Normal Web Content</label>
    </recordTypes>
    <recordTypes>
        <fullName>Normal_Web_Content_Group</fullName>
        <active>true</active>
        <label>Normal Web Content Group</label>
    </recordTypes>
    <recordTypes>
        <fullName>Normal_Web_Content_Translation</fullName>
        <active>true</active>
        <label>Normal Web Content Translation</label>
    </recordTypes>
    <recordTypes>
        <fullName>School</fullName>
        <active>true</active>
        <description>Used on the group website under the &apos;Our Schools&apos; menu only.</description>
        <label>School</label>
    </recordTypes>
    <recordTypes>
        <fullName>School_Profile_Translation</fullName>
        <active>true</active>
        <label>School Profile Translation</label>
    </recordTypes>
    <recordTypes>
        <fullName>Standalone_Sidebar_Block</fullName>
        <active>true</active>
        <description>Only to be created under the &apos;Standalone Sidebar&apos; Website record, used to define the sidebar blocks on pages not available through website menu navigation e.g. the detail pages (lowest level) of News, Events, Testimonials, Staff Directory, Job Postings</description>
        <label>Standalone Sidebar Block</label>
    </recordTypes>
    <recordTypes>
        <fullName>Standard_Sidebar_Block</fullName>
        <active>true</active>
        <description>To be created under a &apos;Web Content&apos; record to define the blocks available on the related webpage</description>
        <label>Standard Sidebar Block</label>
    </recordTypes>
    <recordTypes>
        <fullName>Translation_Request</fullName>
        <active>true</active>
        <label>Translation Request Default</label>
    </recordTypes>
    <recordTypes>
        <fullName>Translation_Request_Web_Block_With_Links</fullName>
        <active>true</active>
        <label>Translation Request With Links</label>
    </recordTypes>
    <recordTypes>
        <fullName>Web_Block</fullName>
        <active>true</active>
        <description>Currently for home page blocks on the school sites. In the future will also be used for the group site home page and might, in time, hold other blocks across the site.</description>
        <label>Web Block</label>
    </recordTypes>
    <recordTypes>
        <fullName>Web_Block_Translation</fullName>
        <active>true</active>
        <label>Web Block Translation</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Cannot_select_internal_and_external_link</fullName>
        <active>true</active>
        <description>User cannot create a record with values in both external link and internal link fields. Only one can and must have a value.</description>
        <errorConditionFormula>OR(
   AND(
       NOT(ISBLANK(Internal_Link__c)),  
       NOT(ISBLANK(External_Link__c))
       ),
   AND(
       OR(
          RecordType.DeveloperName = &quot;Web_Block&quot;,
          RecordType.DeveloperName = &quot;Menu_Image&quot;
          ),
       TEXT(Block_Icon__c) != &quot;prospectus&quot;,
       ISBLANK(Internal_Link__c),  
       ISBLANK(External_Link__c)
       ),
   AND(
       OR(
          RecordType.DeveloperName = &quot;Web_Block_Translation&quot;,
          RecordType.DeveloperName = &quot;Menu_Image_Translation&quot;
          ),
       TEXT(English_Parent__r.Block_Icon__c) != &quot;prospectus&quot;,
       ISBLANK(Internal_Link__c),  
       ISBLANK(External_Link__c)
       )
   )</errorConditionFormula>
        <errorMessage>You must set exactly one link per web block/menu image, except for the school prospectus home page web block. An HPPC may have one or no links. Choose between &quot;Internal Link&quot; and &quot;External Link&quot; as appropriate.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Disallow_Blank_Share_with_Content_Man_Of</fullName>
        <active>true</active>
        <description>Prevents &apos;Share with Content Managers of&apos; from being blank as a blank value would allow some sharing rules to be bypassed when sharing with group designers</description>
        <errorConditionFormula>TEXT(Share_with_Admin_Dept_of__c) = &quot;&quot;</errorConditionFormula>
        <errorMessage>&apos;Share with Content Managers Of&apos; cannot be left blank</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Ensure_Booklets_Added_Correctly</fullName>
        <active>true</active>
        <errorConditionFormula>OR(
   AND(
       OR(
          Issuu_1_Script__c = &quot;&quot;, 
          Issuu_1_Title__c = &quot;&quot;
          ),
       OR(
          Issuu_2_Script__c != &quot;&quot;,
          Issuu_2_Title__c != &quot;&quot;,
          Issuu_3_Script__c != &quot;&quot;,
          Issuu_3_Title__c != &quot;&quot;,
          Issuu_4_Script__c != &quot;&quot;,
          Issuu_4_Title__c != &quot;&quot;
          )
       ),

   AND(
       OR(
          Issuu_1_Script__c = &quot;&quot;, 
          Issuu_1_Title__c = &quot;&quot;,
          Issuu_2_Script__c = &quot;&quot;,
          Issuu_2_Title__c = &quot;&quot;
          ),
       OR(
          Issuu_3_Script__c != &quot;&quot;,
          Issuu_3_Title__c != &quot;&quot;,
          Issuu_4_Script__c != &quot;&quot;,
          Issuu_4_Title__c != &quot;&quot;
          )
       ),
   
   AND(
       OR(
          Issuu_1_Script__c = &quot;&quot;, 
          Issuu_1_Title__c = &quot;&quot;,
          Issuu_2_Script__c = &quot;&quot;,
          Issuu_2_Title__c = &quot;&quot;,
          Issuu_3_Script__c = &quot;&quot;,
          Issuu_3_Title__c = &quot;&quot;
          ),
       OR(
          Issuu_4_Script__c != &quot;&quot;,
          Issuu_4_Title__c != &quot;&quot;
          )
       ),

   AND(
       Issuu_1_Script__c = &quot;&quot;, 
       Issuu_1_Title__c != &quot;&quot;
       ),

   AND(
       Issuu_1_Script__c != &quot;&quot;, 
       Issuu_1_Title__c = &quot;&quot;
       ),

   AND(
       Issuu_2_Script__c = &quot;&quot;, 
       Issuu_2_Title__c != &quot;&quot;
       ),

   AND(
       Issuu_2_Script__c != &quot;&quot;, 
       Issuu_2_Title__c = &quot;&quot;
       ),

   AND(
       Issuu_3_Script__c = &quot;&quot;, 
       Issuu_3_Title__c != &quot;&quot;
       ),

   AND(
       Issuu_3_Script__c != &quot;&quot;, 
       Issuu_3_Title__c = &quot;&quot;
       ),

   AND(
       Issuu_4_Script__c = &quot;&quot;, 
       Issuu_4_Title__c != &quot;&quot;
       ),

   AND(
       Issuu_4_Script__c != &quot;&quot;, 
       Issuu_4_Title__c = &quot;&quot;
       )
   )</errorConditionFormula>
        <errorMessage>Booklet details must be completed in order (e.g. you cannot add details of booklet 2 before you have completed details of booklet 1) and all booklets must have both a title and link.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Ensure_Featured_Booklet_Value_is_Valid</fullName>
        <active>true</active>
        <errorConditionFormula>OR(
   AND(
       INCLUDES(Featured_Booklets__c , &quot;1&quot;),
       OR(
          Issuu_1_Script__c = &quot;&quot;,
          Issuu_1_Title__c = &quot;&quot;
          )
       ),
   AND(
       INCLUDES(Featured_Booklets__c , &quot;2&quot;),
       OR(
          Issuu_2_Script__c = &quot;&quot;,
          Issuu_2_Title__c = &quot;&quot;
          )
       ),
   AND(
       INCLUDES(Featured_Booklets__c , &quot;3&quot;),
       OR(
          Issuu_3_Script__c = &quot;&quot;,
          Issuu_3_Title__c = &quot;&quot;
          )
       ),
   AND(
       INCLUDES(Featured_Booklets__c , &quot;4&quot;),
       OR(
          Issuu_4_Script__c = &quot;&quot;,
          Issuu_4_Title__c = &quot;&quot;
          )
       )
   )</errorConditionFormula>
        <errorMessage>You cannot select a booklet to be a &apos;Featured Booklet&apos; if it does not have both a title and and a link.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Ensure_Featured_Video_Value_is_Valid</fullName>
        <active>true</active>
        <errorConditionFormula>OR(
   AND(
       INCLUDES(Featured_Videos__c, &quot;1&quot;),
       OR(
          Video_1_URL__c = &quot;&quot;,
          Video_1_TITLE__c = &quot;&quot;
          )
       ),
   AND(
       INCLUDES(Featured_Videos__c, &quot;2&quot;),
       OR(
          Video_2_URL__c = &quot;&quot;,
          Video_2_TITLE__c = &quot;&quot;
          )
       ),
   AND(
       INCLUDES(Featured_Videos__c, &quot;3&quot;),
       OR(
          Video_3_URL__c = &quot;&quot;,
          Video_3_TITLE__c = &quot;&quot;
          )
       ),
   AND(
       INCLUDES(Featured_Videos__c, &quot;4&quot;),
       OR(
          Video_4_URL__c = &quot;&quot;,
          Video_4_TITLE__c = &quot;&quot;
          )
       )
   )</errorConditionFormula>
        <errorMessage>You cannot select a video to be a &apos;Featured Video&apos; if it does not have both a title and a link.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Ensure_Valid_Parent_Item</fullName>
        <active>true</active>
        <errorConditionFormula>OR(
   AND(
       Parent_Item__r.RecordType.DeveloperName = &quot;Top_Menu_Item&quot;,
       RecordType.DeveloperName != &quot;Normal_Web_Content_Group&quot;,
       RecordType.DeveloperName != &quot;Normal_Web_Content&quot;,
       RecordType.DeveloperName != &quot;Menu_Image&quot;,
       RecordType.DeveloperName != &quot;School&quot;
       ),
   AND(
       Parent_Item__r.RecordType.DeveloperName = &quot;Home_Page&quot;,
       RecordType.DeveloperName != &quot;Home_Page_Picture_Carousel_Group&quot;,
       RecordType.DeveloperName != &quot;Home_Page_Picture_Carrousel&quot;,
       RecordType.DeveloperName != &quot;Web_Block&quot;,
       RecordType.DeveloperName != &quot;Announcement_Bar&quot;
       ),
   AND(
       Parent_Item__r.RecordType.DeveloperName = &quot;Top_Menu_Item&quot;,
       RecordType.DeveloperName = &quot;School&quot;,
       Parent_Item__r.Name != &quot;OUR SCHOOLS&quot;
       )
   )</errorConditionFormula>
        <errorMessage>This type of record cannot exist under the &apos;Parent Item&apos; selected. Either select a different parent item or try to recreate the record starting from the correct parent item.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Ensure_Videos_Added_Correctly</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
    RecordType.DeveloperName != &quot;Home_Page_Picture_Carrousel&quot;,
    RecordType.DeveloperName != &quot;Home_Page_Picture_Carousel_Translation&quot;,
    OR(
       AND(
           OR(
              Video_1_URL__c = &quot;&quot;, 
              Video_1_TITLE__c = &quot;&quot;
              ),
           OR(
              Video_2_URL__c != &quot;&quot;,
              Video_2_TITLE__c != &quot;&quot;,
              Video_3_URL__c != &quot;&quot;,
              Video_3_TITLE__c != &quot;&quot;,
              Video_4_URL__c != &quot;&quot;,
              Video_4_TITLE__c != &quot;&quot;
              )
           ),

       AND(
           OR(
              Video_1_URL__c = &quot;&quot;, 
              Video_1_TITLE__c = &quot;&quot;,
              Video_2_URL__c = &quot;&quot;,
              Video_2_TITLE__c = &quot;&quot;
              ),
           OR(
              Video_3_URL__c != &quot;&quot;,
              Video_3_TITLE__c != &quot;&quot;,
              Video_4_URL__c != &quot;&quot;,
              Video_4_TITLE__c != &quot;&quot;
              )
           ),
   
       AND(
           OR(
              Video_1_URL__c = &quot;&quot;, 
              Video_1_TITLE__c = &quot;&quot;,
              Video_2_URL__c = &quot;&quot;,
              Video_2_TITLE__c = &quot;&quot;,
              Video_3_URL__c = &quot;&quot;,
              Video_3_TITLE__c = &quot;&quot;
              ),
           OR(
              Video_4_URL__c != &quot;&quot;,
              Video_4_TITLE__c != &quot;&quot;
              )
           ),

       AND(
           Video_1_URL__c = &quot;&quot;, 
           Video_1_TITLE__c != &quot;&quot;
           ),

       AND(
           Video_1_URL__c != &quot;&quot;, 
           Video_1_TITLE__c = &quot;&quot;
           ),
    
       AND(
           Video_2_URL__c = &quot;&quot;, 
           Video_2_TITLE__c != &quot;&quot;
           ),

       AND(
           Video_2_URL__c != &quot;&quot;, 
           Video_2_TITLE__c = &quot;&quot;
           ),

       AND(
           Video_3_URL__c = &quot;&quot;, 
           Video_3_TITLE__c != &quot;&quot;
           ),

       AND(
           Video_3_URL__c != &quot;&quot;, 
           Video_3_TITLE__c = &quot;&quot;
           ),

       AND(
           Video_4_URL__c = &quot;&quot;, 
           Video_4_TITLE__c != &quot;&quot;
           ),

       AND(
           Video_4_URL__c != &quot;&quot;, 
           Video_4_TITLE__c = &quot;&quot;
           )
       )
   )</errorConditionFormula>
        <errorMessage>Video details must be completed in order (e.g. you cannot add details of video 2 before you have completed details of video 1) and all videos must have both a title and link.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Ensure_Web_Block_Links_on_Trans_Record</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
    RecordType.DeveloperName = &quot;Translation_Request_Web_Block_With_Links&quot;,
    ISBLANK(Internal_Link__c),
    ISBLANK(External_Link__c)
    )</errorConditionFormula>
        <errorMessage>You must provide a valid &apos;Internal Link&apos; or &apos;External Link&apos; as the related &apos;English Parent&apos; Web Block contains one.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>First_Record_in_English</fullName>
        <active>true</active>
        <description>Avoid a record with empty English_Parent__c and other language than english</description>
        <errorConditionFormula>AND((Publish_on_School_Site__c = TRUE), ISBLANK(English_Parent__c), OR((ISBLANK(TEXT(Language__c))), NOT(ISPICKVAL(Language__c, &quot;EN&quot;))))</errorConditionFormula>
        <errorMessage>The language for this record must be English (EN). If you want to publish on a School Website in a language different than English you must first create the record in English and then translate it under the &apos;Translations&apos; related list.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Must_Include_Link_with_Link_Title</fullName>
        <active>true</active>
        <errorConditionFormula>OR(
   AND(
       OR(
          Internal_Link__c != &quot;&quot;,  
          External_Link__c != &quot;&quot;
          ),
       Internal_Link_Title__c = &quot;&quot;,
       NOT(ISNEW()) 
       ),
   AND(
       Internal_Link_Title__c != &quot;&quot;, 
       Internal_Link__c = &quot;&quot;,  
       External_Link__c = &quot;&quot;
       )
   )</errorConditionFormula>
        <errorMessage>You must enter a &apos;Link Title&apos; when an internal or external link is included, and vice versa.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>No_Blank_and_No_Override</fullName>
        <active>true</active>
        <description>Prevents, in all cases, a blank value in the &apos;School Override Field&apos; and also the &apos;No Override&apos; value being selected if the record owner is a group employee i.e. User.School__c = &quot;The British Schools Foundation&quot;</description>
        <errorConditionFormula>OR(
   ISBLANK(School_Override_Field__c),
   AND(
       NOT(CONTAINS(RecordType.DeveloperName, &quot;Translation&quot;)), 
       INCLUDES(School_Override_Field__c, &quot;No Override&quot;),
       Publish_on_School_Site__c = TRUE,
       OR(
          TEXT(CreatedBy.School__c) = &quot;The British Schools Foundation&quot;,
          TEXT(CreatedBy.School__c) = &quot;NAE&quot;
          )
       )
   )</errorConditionFormula>
        <errorMessage>The &apos;School Override Field&apos; must never be left blank and cannot include the value &apos;No Override&apos; if &apos;Publish on School Site&apos; is checked and the record was created by someone in the group office.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Prevent_Assigned_Translator_Change</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
    ISCHANGED(Assigned_Translator__c),
    Translation_Status__c != &quot;Complete&quot;,
    $Profile.Name != &quot;System Administrator&quot;
    )</errorConditionFormula>
        <errorMessage>You cannot change the &apos;Assigned Translator&apos; when a translation is in progress. If you wish to change the translator then please use the &apos;Translation Complete&apos; button and then request an updated translation.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Prevent_Blank_Language</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK(TEXT(Language__c))</errorConditionFormula>
        <errorMessage>The &apos;Language&apos; field cannot be blank</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Prevent_Change_of_English_Parent</fullName>
        <active>true</active>
        <description>Prevents the change of English Parent as this could cause problems on the site. The alternative is to clone (where available) the existing record and then delete it or create a completely new record.</description>
        <errorConditionFormula>NOT(ISNEW()) &amp;&amp; ISCHANGED(English_Parent__c) &amp;&amp; NOT(ISBLANK(PRIORVALUE(English_Parent__c)))</errorConditionFormula>
        <errorMessage>You cannot change the &apos;English Parent&apos; of a translated record. Please create a new record instead under the relevant English (EN) record.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Prevent_Invalid_Translation_Record</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
    OR(
       ISBLANK(English_Parent__c),
       ISBLANK(TEXT(Language__c)),
       ISPICKVAL(Language__c, &quot;EN&quot;)
       ),
    CONTAINS(RecordType.DeveloperName, &quot;Translation&quot;)
    )</errorConditionFormula>
        <errorMessage>A &apos;Translation Request&apos; or &apos;Translated&apos; record must have an &apos;English Parent&apos; and a &apos;Language&apos; other than &apos;EN&apos; (English) selected. If you are not requesting a translation then please use a different record type.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Prevent_Invalid_Translation_Record_Type</fullName>
        <active>true</active>
        <errorConditionFormula>AND(   
    NOT(ISBLANK(English_Parent__c)),
    NOT(CONTAINS(RecordType.DeveloperName, &quot;Translation&quot;))
    )</errorConditionFormula>
        <errorMessage>You can only select an &apos;English Parent&apos; for record types that include the word &apos;Translation&apos;. Please cancel this operation and create your &apos;Translation&apos; record via the &apos;Request New Translation&apos; button of the relevant &apos;English Parent&apos; record instead.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Prevent_Invalid_Translator_Lang_Combo</fullName>
        <active>true</active>
        <errorConditionFormula>OR(
   AND(TEXT(Language__c) = &quot;ES&quot;, 
       NOT(CONTAINS(TEXT(Assigned_Translator__c), &quot;Spanish&quot;))
       ),
   AND(TEXT(Language__c) = &quot;PT&quot;,
       NOT(CONTAINS(TEXT(Assigned_Translator__c), &quot;Portuguese&quot;))
       ),
   AND(TEXT(Language__c) = &quot;RU&quot;,
       NOT(CONTAINS(TEXT(Assigned_Translator__c), &quot;Russian&quot;))
       ),
   TEXT(Language__c) = &quot;UZ&quot;,
   TEXT(Language__c) = &quot;UK&quot;
   )</errorConditionFormula>
        <errorMessage>The &apos;Language&apos; / &apos;Assigned Translator&apos; combination is invalid. Please ensure that the translator language equals the record language.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Prevent_Meta_Title_and_Desc_Change</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
    $User.Can_Edit_Web_Meta_Titles_Descriptions__c != True,
    $Profile.Id != &quot;00e6F000001hU3F&quot;,
    NOT(CONTAINS(RecordType.DeveloperName, &quot;Translation&quot;)),
    OR(
       AND(
           ISCHANGED(Meta_Tag_Title__c),
           NOT(ISBLANK(PRIORVALUE(Meta_Tag_Title__c)))
           ),
       AND(
           ISCHANGED(Meta_Tag_Description__c),
           NOT(ISBLANK(PRIORVALUE(Meta_Tag_Description__c)))
           )
       )
    )</errorConditionFormula>
        <errorMessage>You do not have permission to edit the Meta Tag Title &amp; Description of this record. If you would like to update these then please contact the Group Head of Marketing.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Prevent_NAE_User_Editing_BSF_Records</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
    TEXT($User.School__c) = &quot;NAE&quot;,
    OR(
       INCLUDES(School_Override_Field__c, &quot;Marbella&quot;),
       INCLUDES(School_Override_Field__c, &quot;Navarra&quot;),
       INCLUDES(School_Override_Field__c, &quot;Brasilia&quot;),
       INCLUDES(School_Override_Field__c, &quot;New York&quot;),
       INCLUDES(School_Override_Field__c, &quot;Group Site&quot;),
       INCLUDES(School_Override_Field__c, &quot;Sandbox 1&quot;),
       INCLUDES(School_Override_Field__c, &quot;Sandbox 2&quot;),
       INCLUDES(English_Parent__r.School_Override_Field__c, &quot;Marbella&quot;),
       INCLUDES(English_Parent__r.School_Override_Field__c, &quot;Navarra&quot;),
       INCLUDES(English_Parent__r.School_Override_Field__c, &quot;Brasilia&quot;),
       INCLUDES(English_Parent__r.School_Override_Field__c, &quot;New York&quot;),
       INCLUDES(English_Parent__r.School_Override_Field__c, &quot;Group Site&quot;),
       INCLUDES(English_Parent__r.School_Override_Field__c, &quot;Sandbox 1&quot;),
       INCLUDES(English_Parent__r.School_Override_Field__c, &quot;Sandbox 2&quot;),
       TEXT(Share_with_Admin_Dept_of__c) = &quot;The British International School of Marbella&quot;,
       TEXT(Share_with_Admin_Dept_of__c) = &quot;The British School of Navarra&quot;,
       TEXT(Share_with_Admin_Dept_of__c) = &quot;The British School of Brasilia&quot;,
       TEXT(Share_with_Admin_Dept_of__c) = &quot;The New York International School&quot;,
       TEXT(Share_with_Admin_Dept_of__c) = &quot;The British Schools Foundation&quot;
       )
    )</errorConditionFormula>
        <errorMessage>You do not have permission to create or edit a record for this school. Please contact your system administrator if you think you should have access.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Prevent_No_Override_with_Other_Schools</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
    INCLUDES(School_Override_Field__c, &quot;No Override&quot;),
    School_Override_Count__c &gt; 1
    )</errorConditionFormula>
        <errorMessage>You cannot include the value &apos;No Override&apos; together with other schools in the &apos;School Override Field&apos;</errorMessage>
    </validationRules>
</CustomObject>